# qr-code-thing

./: README.md  main.py  pyproject.toml
